--- a/pur_beurre/account.html
+++ b/pur_beurre/account.html
@@ -34,17 +34,17 @@
                             <input type="text" id="question" class="form-control mybox" value="Chercher" aria-label="Search"
                                 required>
                         </form>
-                        <li class="nav-item nav-link js-scroll-trigger">
+                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#services">
-                                <i class="far fa-user"></i>
+                                <i class="fas fa-user" id="user_icon"></i>
                             </a>
                         </li>
-                        <li class="nav-item nav-link js-scroll-trigger">
+                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#portfolio">
                                 <i class="fas fa-carrot" data-fa-transform="rotate-315"></i>
                             </a>
                         </li>
-                        <li class="nav-item nav-link js-scroll-trigger">
+                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#contact">
                                 <i class="fas fa-sign-out-alt"></i>
                             </a>
@@ -58,17 +58,17 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center"> 
                     <div class="col-lg-8 align-self-center mb-2">
-                        <p class="text-white-50 mb-4">[ Prénom utilisateur ]</p>
+                        <h2 class="text-white-75 mb-4">[ Prénom utilisateur ]</h2>
                     </div>
                 </div>
             </div>
         </header>
         <!-- Services-->
-        <section class="page-section" id="services">
+        <section class="page-section bg-white" id="services">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-8 text-center">
-                            <p class="m-4">Email</p>
+                            <h4 class="m-4 text-dark"> [Email]</h4>
                     </div>
                 </div>
             </div>
@@ -79,9 +79,10 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <div class="row">
-                            <div class="col-sm-6 align-self-center small text-muted"><a href="#mention_legales">Mention
-                                    légales</a></div>
-                            <div class="col-sm-6 align-self-center small text-muted"><a href="#contact">Contact</a></div>
+                            <div class="col-sm-6 align-self-center text-muted"><a href="#mention_legales"
+                                    class="footer-text">Mention légales</a></div>
+                            <div class="col-sm-6 align-self-center text-muted"><a href="#contact"
+                                    class="footer-text">Contact</a></div>
                         </div>
                     </div>
                 </div>
