--- a/pur_beurre/aliment.html
+++ b/pur_beurre/aliment.html
@@ -34,17 +34,17 @@
                             <input type="text" id="question" class="form-control mybox" value="Chercher" aria-label="Search"
                                 required>
                         </form>
-                        <li class="nav-item nav-link js-scroll-trigger">
+                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#services">
-                                <i class="far fa-user"></i>
+                                <i class="fas fa-user" id="user_icon"></i>
                             </a>
                         </li>
-                        <li class="nav-item nav-link js-scroll-trigger">
+                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#portfolio">
                                 <i class="fas fa-carrot" data-fa-transform="rotate-315"></i>
                             </a>
                         </li>
-                        <li class="nav-item nav-link js-scroll-trigger">
+                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#contact">
                                 <i class="fas fa-sign-out-alt"></i>
                             </a>
@@ -58,26 +58,28 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center"> 
                     <div class="col-lg-8 align-self-center mb-2">
-                        <p class="text-white-50 mb-4">[ Nom aliment ]</p>
+                        <h2 class="text-white-75 mb-4">[ Nom aliment ]</h2>
                     </div>
                 </div>
             </div>
         </header>
         <!-- Services-->
-        <section class="page-section" id="services">
+        <section class="page-section bg-white text-dark" id="services">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center">
-                            <p class="h5 m-2">Nutriscore</p>
-                            <img class="img-fluid" src="assets/img/nutriscore.png" width="150" alt="nutriscore"/>
+                        <p class="h5 m-2">Nutriscore</p>
+                        <ul class="list-group">
+                            <h4 class="list-group-item-heading font-weight-bold">[A]</h4>
+                        </ul>
                     </div>
                     <div class="col-md-6 text-center">
                             <p class="h5 m-2">Repère nutritionnel pour 100g</p>
                             <ul class="list-group">
-                                <li class="list-group-item">30.9g <span class="font-weight-bold">matière grasse</span></li>
-                                <li class="list-group-item">10.6g <span class="font-weight-bold">acides gras saturés</span></li>
-                                <li class="list-group-item">56.3g <span class="font-weight-bold">sucres</span></li>
-                                <li class="list-group-item">0.107g <span class="font-weight-bold">sel</span></li>
+                                <li class="list-group-item">[30.9g] <span class="font-weight-bold">matière grasse</span></li>
+                                <li class="list-group-item">[10.6g] <span class="font-weight-bold">acides gras saturés</span></li>
+                                <li class="list-group-item">[56.3g] <span class="font-weight-bold">sucres</span></li>
+                                <li class="list-group-item">[0.107g <span class="font-weight-bold">sel</span></li>
                             </ul>
                     </div>
                 </div>
@@ -91,9 +93,10 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <div class="row">
-                            <div class="col-sm-6 align-self-center small text-muted"><a href="#mention_legales">Mention
-                                    légales</a></div>
-                            <div class="col-sm-6 align-self-center small text-muted"><a href="#contact">Contact</a></div>
+                            <div class="col-sm-6 align-self-center text-muted"><a href="#mention_legales"
+                                    class="footer-text">Mention légales</a></div>
+                            <div class="col-sm-6 align-self-center text-muted"><a href="#contact"
+                                    class="footer-text">Contact</a></div>
                         </div>
                     </div>
                 </div>
