--- a/pur_beurre/registered_aliments.html
+++ b/pur_beurre/registered_aliments.html
@@ -34,17 +34,17 @@
                             <input type="text" id="question" class="form-control mybox" value="Chercher" aria-label="Search"
                                 required>
                         </form>
-                        <li class="nav-item nav-link js-scroll-trigger">
+                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#services">
-                                <i class="far fa-user"></i>
+                                <i class="fas fa-user" id="user_icon"></i>
                             </a>
                         </li>
-                        <li class="nav-item nav-link js-scroll-trigger">
+                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#portfolio">
                                 <i class="fas fa-carrot" data-fa-transform="rotate-315"></i>
                             </a>
                         </li>
-                        <li class="nav-item nav-link js-scroll-trigger">
+                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#contact">
                                 <i class="fas fa-sign-out-alt"></i>
                             </a>
@@ -58,18 +58,18 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center"> 
                     <div class="col-lg-8 align-self-center mb-2">
-                        <p class="text-white-50 mb-4">[ Mes aliments enregistrés ]</p>
+                        <h2 class="text-white-75 mb-4">Mes aliments enregistrés</h2>
                     </div>
                 </div>
             </div>
         </header>
         <!-- Services-->
-        <section class="page-section" id="services">
+        <section class="page-section bg-white" id="services">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 text-center">
                         <div class="m-4 results-image">
-                            <a href="">
+                            <a href="" class="ele_dark_href">
                                 <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                                 <p class="h4 m-1"> aliment 1</p>
                             </a>
@@ -83,7 +83,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 text-center">
                         <div class="m-4 results-image">
-                            <a href="">
+                            <a href="" class="ele_dark_href">
                                 <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                                 <p class="h4 m-1"> aliment 2</p>
                             </a>
@@ -97,7 +97,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 text-center">
                         <div class="m-4 results-image">
-                            <a href="">
+                            <a href="" class="ele_dark_href">
                                 <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                                 <p class="h4 m-1"> aliment 3</p>
                             </a>
@@ -111,7 +111,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 text-center">
                         <div class="m-4 results-image">
-                            <a href="">
+                            <a href="" class="ele_dark_href">
                                 <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                                 <p class="h4 m-1"> aliment 4</p>
                             </a>
@@ -125,7 +125,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 text-center">
                         <div class="m-4 results-image">
-                            <a href="">
+                            <a href="" class="ele_dark_href">
                                 <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                                 <p class="h4 m-1"> aliment 5</p>
                             </a>
@@ -139,7 +139,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 text-center">
                         <div class="m-4 results-image">
-                            <a href="">
+                            <a href="" class="ele_dark_href">
                                 <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                                 <p class="h4 m-1"> aliment 6</p>
                             </a>
@@ -162,9 +162,10 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <div class="row">
-                            <div class="col-sm-6 align-self-center small text-muted"><a href="#mention_legales">Mention
-                                    légales</a></div>
-                            <div class="col-sm-6 align-self-center small text-muted"><a href="#contact">Contact</a></div>
+                            <div class="col-sm-6 align-self-center text-muted"><a href="#mention_legales"
+                                    class="footer-text">Mention légales</a></div>
+                            <div class="col-sm-6 align-self-center text-muted"><a href="#contact"
+                                    class="footer-text">Contact</a></div>
                         </div>
                     </div>
                 </div>
