--- a/pur_beurre/create_account.html
+++ b/pur_beurre/create_account.html
@@ -52,76 +52,36 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead" id="search">
+        <header class="searchhead" id="searched">
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
-                    <div class="col-lg-10 align-self-end">
-                        <h1 class="text-uppercase text-white font-weight-bold">Du Gras, oui mais de qualité</h1>
-                        <hr class="divider my-4" />
-                    </div> 
                     <div class="col-lg-8 align-self-center mb-2">
-                        <h2 class="text-white-75 font-weight-light">Trouvez un produit de substitution pour ceux que vous consommez tous les jours!</h2>
-                    </div>
-                    <div class="col-10 col-md-8 col-lg-5  align-self-start">
-                        <form action="index.html" method="post" novalidate>
-                            <div class="form-group align-content-end">
-                                <div class="row">
-                                    <div class="col-8">
-                                        <input type="text" id="question" class="form-control text-dark" value="Produit" required>
-                                    </div>
-                                    <div class="col-4">
-                                        <button type="button" id="ask_button" class="btn btn-primary">Chercher</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
+                        <h2 class="text-white-75 mb-4"> Créer compte </h2>
                     </div>
                 </div>
             </div>
         </header>
-        <!-- About-->
-        <section class="page-section bg-primary" id="about">
+        <!-- Services-->
+        <section class="page-section bg-white" id="services">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Colette et Rémy</h2>
-                        <hr class="divider light my-4" />
-                        <p class="text-white-75 mb-4">Pur Beurre est l'initiative de deux amoureux de la gastronomie française, Colette Tatou et Rémy, que vous avez déjà
-                        certainement rencontrés dans notre excellent restaurant Ratatouille</p>
-                            <div class="row">
-                                <div class="col-sm-6 align-self-center">
-                                        <img src="assets/img/colette.png" width="150" alt="colette">
+                        <form action="create_account.html" method="post" novalidate>
+                            <div class="form-group align-content-center">
+                                <div class="row justify-content-center">
+                                    <div class="col-8 pl-2">
+                                        <label for="email" class="text-dark">Email</label>
+                                        <input type="email" id="email" class="form-control" value="email@email.com" required>
+                                    </div>
+                                    <div class="col-8 pl-2 pt-4">
+                                        <label for="pwd" class="text-dark" >Mot de passe</label>
+                                        <input type="password" id="password" class="form-control text-dark" value="********" required>
+                                    </div>
+                                    <div class="col-8 pl-2 pt-4">
+                                        <button type="submit" id="create_account_button" class="text-right btn btn-primary">Créer</button>
+                                    </div>
                                 </div>
-                                <div class="col-sm-6 align-self-center">
-                                    <img src="assets/img/remy.png" width="150" alt="remy">
-                                </div>
                             </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-
-        <!-- Contact-->
-        <section class="page-section bg-white" id="contact">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <h2 class="text-dark mt-0">Contactez-nous!</h2>
-                        <hr class="divider light my-4" />
-                        <p class="text-dark-75 mb-4">N'hésitez pas à nous contacter par téléphone ou email!</p>
-                        <div class="row">
-                            <div class="col-sm-6 align-self-center text-secondary">
-                                <i class="fas fa-phone fa-rotate-90"></i>
-                                <p class="text-dark-75 text-center mt-2">00.00.00.00.00</p>
-                            </div>
-                            <div class="col-sm-6 align-self-center text-secondary">
-                                <i class="far fa-envelope"></i>
-                                <p class="text-dark-75 mt-2">mail@mail.com</p>
-                            </div>
-                        </div>
-                    </div>
+                        </form>
                 </div>
             </div>
         </section>
